@@ -9,6 +9,8 @@ netplot 0.2-0
 
 -   New feature: Gradients.
 
+-   The argument sample.edges now works as expected.
+
 netplot 0.1-0
 
 -   First CRAN release.
